Fix footer alignment

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ footer {
     color: var(--neutral2);
     display: flex;
     align-items: end;
+    justify-content: center;
     flex-grow: 1;
 }
 
@@ -98,6 +99,13 @@ footer {
 
 #addHabit {
     padding: clamp(4px, 2vw, 20px);
+}
+
+.section--left, .section--right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .habit {
